# gameoverlord

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.txt  build.bat  geometry.h
codegen/: generate_geometry_funcs.c
old/: vulkan_renderer.c
old/oldsrc/: graphics.h  old_platform.c  old_platform.h
old/oldsrc/oldcpp/src/: main.cpp
old/oldsrc/oldcpp/src/header_files/: fundamental.hpp  pch.h  platform.hpp  test.hpp
old/oldsrc/oldcpp/src/source_files/: fundamental.cpp  platform_windows.cpp
old/oldsrc/oldcpp/src/tests/: test_everything.cpp  test_fundamental.cpp
old/src/: fundamental.h  generate_geometry_funcs.c  geometry_math.h  main.c  platform.c  platform.h  png_loader.c  png_loader.h
src/: TODO.txt  fundamental.cpp  fundamental.h  fundamental.hpp  game.c  geometry.h  main.c  main.cpp  platform.hpp  platform_layer.h  platform_windows.cpp  renderer.h  vulkan_renderer.c  windows_platform_layer.c
src/engine/: asset.c  asset.h  asset_files.c  asset_files.h  engine_config.h  fundamental.c  fundamental.h  geometry.h  platform_layer.h  windows_platform_layer.c
src/game/: game.c  game.h
src/shaders/: frag.spv  frag_shader.frag  fragment_shader.frag  vert.spv  vert_shader.vert  vertex_shader.vert
src/shaders/fancy_sprite_shaders/: fragment_shader.frag  vertex_shader.vert
util/: file_to_c_array_converter.c
